--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,12 @@ h2 {
   text-decoration: underline solid;
   border-bottom: 1px solid #252525; 
   padding-bottom: 2px; 
+  /* width: 100%;
+  height:100%;
+  line-height: 25px;
+  border-radius: 4px;
+  color: #fff;
+  background-color:  rgba(81, 72, 201); */
 }
 
 /* Banner image */
@@ -66,8 +72,8 @@ h2 {
   height: 500px;
   width: 100%;
   position: relative;
-  clear: both;
-  /* overflow: hidden; */
+  /* clear: both; */
+  overflow: hidden;
 }
 
 #banner-image {
@@ -105,4 +111,42 @@ h2 {
   position: absolute;
   border-radius: 10%;
   color: #ffffff;
+}
+/* Section for the history text of yams */
+#yam-intro {
+  clear: both;
+  width: 30%;
+  float: left;
+  padding: 30px 30px 0 30px;
+  /* border:10px; */
+  box-sizing: border-box;
+}
+hr {
+  border-top: 1px solid #252525;
+  width: 100%;
+  margin: 3px 0;
+}
+/* Image gallery of yam festivals */
+.image-gallery {
+  height: 900px;
+  float:right;
+  line-height: 1;
+  column-count: 3;
+  column-gap: 1;
+  width: 70%;
+  box-sizing: border-box;
+  padding-top: 30px;
+}
+
+.text-div p {
+  padding-top: 10px;
+  text-align: justify;
+}
+
+.text-div {
+  padding-top: 10px;
+  text-align: justify;
+}
+.image-gallery > img {
+  width: 100%;
 }
