--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Roboto:wght@300&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Roboto:wght@300&family=Ubuntu&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Roboto:wght@300&family=Ubuntu&display=swap");
 
 * {
   margin: 0;
@@ -11,7 +11,7 @@ body {
   font-family: Lato, sans-serif;
   /* font-family: 'Roboto', sans-serif; */
   /* font-family: 'Roboto Condensed', sans-serif; */
-  font-family: 'Ubuntu', sans-serif;
+  font-family: "Ubuntu", sans-serif;
   font-weight: 300;
   color: #4c4c4c;
 }
@@ -19,7 +19,7 @@ body {
 /* Main Title and banner  */
 h1,
 h2 {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   /* font-family: 'Ubuntu', sans-serif; */
   letter-spacing: 3px;
   text-transform: uppercase;
@@ -47,18 +47,18 @@ h2 {
   line-height: 60px;
 }
 #menu-bar a:hover {
-  border-top: 1px solid  #252525; 
-  border-bottom: 1px solid  #252525; 
+  border-top: 1px solid #252525;
+  border-bottom: 1px solid #252525;
 }
 #menu-bar a {
   text-decoration: none;
-  color: #252525; 
+  color: #252525;
 }
 /* Underline the current page link on the menu bar */
 .selected {
   text-decoration: underline solid;
-  border-bottom: 1px solid #252525; 
-  padding-bottom: 2px; 
+  border-bottom: 1px solid #252525;
+  padding-bottom: 2px;
 }
 
 /* Banner image */
@@ -73,7 +73,7 @@ h2 {
 #banner-image {
   height: 100%;
   width: 100%;
-  object-fit:cover;
+  object-fit: cover;
   animation-name: zoom-banner;
   animation-duration: 5s;
   animation-fill-mode: both;
@@ -82,16 +82,16 @@ h2 {
 /* Add animation to the banner */
 @keyframes zoom-banner {
   from {
-    transform: scale(.9);
+    transform: scale(0.9);
   }
   to {
-    transform: scale(1); 
+    transform: scale(1);
   }
 }
 /* Add brief description of the banner on banner text */
 #banner-text {
   font-size: 110%;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   letter-spacing: 3px;
   text-align: center;
@@ -120,27 +120,45 @@ hr {
   width: 100%;
   margin: 3px 0;
 }
+/* Format of the text on the paragraphs */
+.text-div p {
+  padding-top: 10px;
+  text-align: justify;
+  line-height: 25px;
+}
+/* some breathing space between the text and the image gallery */
+.text-div {
+  padding-top: 10px;
+  text-align: justify;
+}
 /* Image gallery of yam festivals */
 .image-gallery {
-  height: 900px;
-  float:right;
-  line-height: 1;
-  column-count: 3;
-  column-gap: 1;
+  float: right;
+  display: flex;
+  flex-wrap: wrap;
   width: 70%;
   box-sizing: border-box;
   padding-top: 30px;
 }
 
-.text-div p {
-  padding-top: 10px;
-  text-align: justify;
+.image-gallery > h2 {
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+}
+/* display 3 columns of images each with 32% width with some 4px spaceing */
+.image-column {
+  flex: 32%;
+  max-width: 32%;
+  padding: 0 4px;
 }
 
-.text-div {
-  padding-top: 10px;
-  text-align: justify;
-}
-.image-gallery > img {
+.image-column img {
+  margin-top: 15px;
+  vertical-align: middle;
   width: 100%;
+}
+/* same line height with the other text at the left of the page */
+.image-column p {
+  line-height: 25px;
 }
