--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,8 +111,7 @@ h2 {
   clear: both;
   width: 30%;
   float: left;
-  padding: 30px 30px 0 30px;
-  /* border:10px; */
+  padding: 30px;
   box-sizing: border-box;
 }
 hr {
@@ -138,7 +137,7 @@ hr {
   flex-wrap: wrap;
   width: 70%;
   box-sizing: border-box;
-  padding-top: 30px;
+  padding: 30px 0;
 }
 
 .image-gallery > h2 {
@@ -174,15 +173,18 @@ footer {
   margin-top: 15px;
 }
 .footer-menu span a {
-  margin: 0 20px 20px 0;
+  margin: 10px 20px 20px 0;
   text-decoration: none;
   color: #252525;
   letter-spacing: 3px;
 }
 .footer-menu {
-  margin: 0 0 10px 0;
+  margin: 10px 0 10px 0;
 }
 
+.contact-us span {
+  margin-top: 10px 0;
+}
 .contact-us span a {
   margin: 0 30px 5px 30px;
   color: #252525;
