--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,15 @@ body {
   color: #4c4c4c;
 }
 
+header {
+  position: fixed;
+  top: 0;
+  z-index: 9999;
+  overflow: hidden;
+  background-color: white;
+  width: 100%;
+}
+
 /* Main Title and banner  */
 h1,
 h2 {
@@ -58,6 +67,10 @@ h2 {
   color: #252525;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+}
 /* Underline the current page link on the menu bar */
 .selected {
   /* text-decoration: underline solid; */
@@ -67,7 +80,7 @@ h2 {
 
 /* Banner image */
 #banner-section {
-  height: 500px;
+  height: 55vh;
   width: 100%;
   position: relative;
   /* clear: both; */
@@ -101,29 +114,30 @@ h2 {
   text-transform: uppercase;
   letter-spacing: 3px;
   text-align: center;
-  width: 280px;
-  height: 100px;
+  width: 70%;
+  height: 4rem;
   padding-top: 20px;
   padding-left: 10px;
   background-color: rgba(52, 42, 192, 0.7);
-  bottom: 30px;
-  left: 20px;
-  position: absolute;
+  bottom: 6rem;
+  position: relative;
   border-radius: 10%;
-
+  margin: 0 auto;
 }
 
 #banner-text>h2 {
   color: #ffffff;
   font-size: 120%;
+  margin: 0 auto;
 }
 
 /* Section for the history text of yams */
 #yam-intro {
-  clear: both;
-  width: 30%;
-  float: left;
-  padding: 30px;
+  /* clear: both; */
+  width: 80%;
+  margin: 0 auto;
+  /* float: left; */
+  /* padding: 30px; */
   box-sizing: border-box;
 }
 
@@ -147,15 +161,23 @@ hr {
 }
 
 /* Image gallery of yam festivals */
-.image-gallery {
-  float: right;
+/* .image-gallery {
+   float: right; 
   display: flex;
   flex-wrap: wrap;
   width: 70%;
   box-sizing: border-box;
   padding: 30px 0;
+} */
+.image {
+  /* float: right; */
+  display: flex;
+  flex-wrap: wrap;
+  width: 70%;
+  flex-direction: column;
+  box-sizing: border-box;
+  padding: 30px 0;
 }
-
 .image-gallery>h2 {
   width: 100%;
   margin: 0 auto;
@@ -212,6 +234,26 @@ footer {
   font-size: 150%;
 }
 
+/* Festival Celebrations */
+#celebration-details {
+  float: right;
+  width: 70%;
+  box-sizing: border-box;
+  padding: 30px 0;
+}
+
+.videoitem {
+  width: 80%;
+  margin: 0 auto;
+}
+
+video,
+iframe {
+  width: 80%;
+  margin: auto;
+  height: auto;
+}
+
 /* Media queries */
 
 /* For larger to medium screens size from 859px width and down. The point that our 2 panel image reduces  to 2 */
@@ -229,7 +271,8 @@ footer {
     width: 40%;
     padding: 10px;
   }
-/* reduce our sub title text to be in line with reduced screen */
+
+  /* reduce our sub title text to be in line with reduced screen */
   h1,
   h2 {
     font-size: 100%;
