--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ main {
 
 /* Banner image */
 #banner-section {
-  height: 55vh;
+  height: 70vh;
   width: 100%;
   position: relative;
   /* clear: both; */
@@ -178,14 +178,42 @@ main {
 /* image gallery will display 3 columns for wide screens hence 33% width */
 .image {
   display: flex;
-  width: 33%;
+  width: 80%;
   flex-direction: column;
   box-sizing: border-box;
   padding-top: 1rem;
   margin: 0 auto;
-  text-align: center;
+  text-align: justify;
   padding:  1rem;
 }
+
+.caption {
+  text-align: justify;
+  width: 50%;
+  height: auto;
+  padding: 10px;
+  line-height: 25px;
+  /* background-color:  rgba(121, 15, 54, 0.7); */
+  background-color: rgba(52, 42, 192, 0.7);
+  bottom: 10%;
+  left: -2rem;
+  position: relative;
+  border-radius: 10%;
+  color: white;
+}
+
+/* #gallery-1{
+  background-color: rgb(234, 204, 215);
+}
+#gallery-2{
+  background-color: #CCEADF;
+}
+#gallery-3{
+  background-color: #E6F9DD;
+} */
+/* #gallery-4{
+  background-color:#F1DDF9;
+} */
 .image > img {
   width: 100%;
   height: auto;
