--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Ubuntu&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Ubuntu&display=swap"); */
+@import url('https://fonts.googleapis.com/css2?family=Gluten:wght@300&family=Roboto+Condensed:wght@300&family=Roboto:wght@300&family=Ubuntu&display=swap');
 
 /* ensure no margins, border and paddings are added to elements */
 * {
@@ -27,7 +28,8 @@ header {
 /* Main Title and banner  */
 h1,
 h2 {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Gluten', cursive;
+  /* font-family: "Roboto", sans-serif; */
   letter-spacing: 3px;
   text-transform: uppercase;
   color: #252525;
@@ -48,6 +50,8 @@ h2 {
 }
 
 #menu-bar li {
+  font-family: 'Gluten', cursive;
+  font-weight: bold;
   float: left;
   margin-right: 20px;
   list-style-type: none;
@@ -157,7 +161,7 @@ main {
 /* Format of the text on the paragraphs */
 .text-div p {
   padding-top: 10px;
-  line-height: 30px;
+  line-height: 2rem;
 }
 
 /* some breathing space between the text and the image gallery */
@@ -191,6 +195,7 @@ main {
   flex-direction: column;
   box-sizing: border-box;
   /* padding-top: 1rem; */
+  line-height: 2rem;
   margin: 0 auto;
   text-align: justify;
   padding:  1rem;
@@ -202,7 +207,7 @@ main {
   height: auto;
   /* padding: 0 10px; */
   /* margin: 0 10px; */
-  line-height: 30px;
+  line-height: 2rem;
   /* background-color:  rgba(121, 15, 54, 0.7); */
   /* background-color: rgba(52, 42, 192, 0.7); */
   /* bottom: 10%; */
@@ -246,7 +251,7 @@ section > h2 {
 
 /* same line height with the other text at the left of the page */
 .image-column p {
-  line-height: 30px;
+  line-height: 2rem;
 }
 
 /* Festivals  and Igbo tribe section with videos */
@@ -266,6 +271,7 @@ section > h2 {
   margin: 0 auto;
   text-align: justify;
   padding:  1rem;
+  line-height: 2rem;
 }
 
 .videoitem > video {
