--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,8 +183,8 @@ main {
 }
 
 /* Image gallery of yam festivals */
-.image-gallery {
-  width: 80%;
+#image-gallery {
+  width: 70%;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
@@ -349,7 +349,7 @@ shift the menu to the left. ALso change our image gallery to single column  */
     margin-left: 20px;
   }
 
-  .image-gallery {
+  #image-gallery {
     margin: 0 auto;
     flex-wrap: nowrap;
     flex-direction: column;
